# 3D_GIS_Assignment

./: .gitattributes  .gitignore  README.md
08_dev_project/: CMakeLists.txt
08_dev_project/src/application/usecases/: AddModelToSceneUseCase.h  AddTerrainToSceneUseCase.h  BuildTerrainMeshUseCase.cpp  LoadBatchModelsUseCase.cpp  LoadTerrainUseCase.cpp  LoadTerrainUseCase.h
08_dev_project/src/domain/geometry/: Mesh.h  Triangle.h
08_dev_project/src/domain/math/: Vec2.h  Vec3.h
08_dev_project/src/domain/model/: Transform.h
08_dev_project/src/domain/ports/: IModelLoader.h  ISceneRenderer.h
08_dev_project/src/domain/scene/: SceneNode.h
08_dev_project/src/domain/terrain/: TerrainMeshBuilder.cpp  TerrainRaster.h
08_dev_project/src/domain/texture/: TextureImage.h
08_dev_project/src/infrastructure/model/: FileSystemModelBatchRepository.h  ObjModelLoader.h
08_dev_project/src/infrastructure/raster/: GeoTiffDemReader.cpp
08_dev_project/src/infrastructure/rendering/: OpenGLSceneRenderer.h  SceneScreenshotWriter.h
08_dev_project/src/ui/: MainWindow.cpp  MainWindow.h  ViewportWidget.cpp  ViewportWidget.h  Win32DesktopWindow.cpp  Win32DesktopWindow.h  main.cpp
09_report/: 三维GIS实习报告.docx
code/: CMakeLists.txt
code/src/application/usecases/: AddModelToSceneUseCase.cpp  AddTerrainToSceneUseCase.cpp  BuildTerrainMeshUseCase.h  LoadBatchModelsUseCase.h  LoadOsgbTilesUseCase.cpp  LoadOsgbTilesUseCase.h  LoadSingleModelUseCase.cpp  LoadSingleModelUseCase.h
code/src/domain/geometry/: NormalCalculator.cpp  NormalCalculator.h  TextureCoordinateCalculator.cpp  TextureCoordinateCalculator.h  Vertex.h
code/src/domain/model/: Material.h  ModelAsset.h
code/src/domain/ports/: IDemReader.h  IImageReader.h  IModelBatchRepository.h  IOsgbConverter.h  ISceneRenderer.h
code/src/domain/scene/: SceneGraph.h
code/src/domain/terrain/: TerrainMesh.h  TerrainMeshBuilder.cpp  TerrainMeshBuilder.h
code/src/infrastructure/model/: FileSystemModelBatchRepository.cpp  ObjModelLoader.cpp  OsgbToObjConverter.cpp  OsgbToObjConverter.h
code/src/infrastructure/raster/: GeoTiffDemReader.h  GeoTiffImageReader.cpp  GeoTiffImageReader.h
code/src/infrastructure/rendering/: OpenGLSceneRenderer.cpp  SceneScreenshotWriter.cpp
code/src/ui/: MainWindow.cpp  MainWindow.h  Win32DesktopWindow.cpp  main.cpp
data/bunny_processed/: bun090 - Cloud.subsampled.ply
data/dalian_dem_raw/: ASTGTMV003_N38E121_dem.tif
data/dem_image_processed/: DalianDem_Clip.tif  Dalian_Clip.tif
docs/: 03-class-diagram.puml  04-sequence-diagrams.puml  05-implementation-tasks.md  06-codex-master-prompt.md  Visual Studio 2019 安装与MFC新建项目编译.txt  三维开发语言准备.txt  作业一.txt  实习2 .txt  综合实习任务.pptx
